Revert arbitrary users devfile changes temporarily
Revert changes to use patched devfiles until nightly CI build is fixed,
as currently registry is in non-working state.

Signed-off-by: Angel Misevski <amisevsk@redhat.com>

--- a/devfiles/apache-camel-springboot/devfile.yaml
+++ b/devfiles/apache-camel-springboot/devfile.yaml
@@ -22,7 +22,9 @@ components:
   -
     type: dockerimage
     alias: maven
-    image: quay.io/eclipse/che-java8-maven:nightly
+    image: maven:3.6.1-jdk-8
+    command: ['sleep']
+    args: ['infinity']
     env:
       - name: MAVEN_CONFIG
         value: "/home/user/.m2"
@@ -38,6 +40,10 @@ components:
         value: "-XX:MaxRAMPercentage=50.0 -XX:+UseParallelGC -XX:MinHeapFreeRatio=10
           -XX:MaxHeapFreeRatio=20 -XX:GCTimeRatio=4 -XX:AdaptiveSizePolicyWeight=90
           -Dsun.zip.disableMemoryMapping=true -Xms20m -Djava.security.egd=file:/dev/./urandom"
+      - name: PS1
+        value: "$(echo ${0})\\$"
+      - name: HOME
+        value: "/home/user"
     volumes:
       - name: m2
         containerPath: "/home/user/.m2"
