--- a/devfiles/go/devfile.yaml
+++ b/devfiles/go/devfile.yaml
@@ -18,8 +18,10 @@ components:
 -
   type: dockerimage
   # this version is used in the plugin
-  image: quay.io/eclipse/che-golang-1.10:nightly
+  image: golang:1.10.7-stretch
   alias: go-cli
+  command: ['sleep']
+  args: ['infinity']
   env:
     - name: GOPATH
       # replicate the GOPATH from the plugin
@@ -28,6 +30,8 @@ components:
       # replicate the GOCACHE from the plugin, even though the cache is not shared
       # between the two
       value: /tmp/.cache
+    - name: PS1
+      value: $(echo ${0})\\$
   memoryLimit: 512Mi
   mountSources: true
 commands:
