--- a/devfiles/java-maven/devfile.yaml
+++ b/devfiles/java-maven/devfile.yaml
@@ -15,7 +15,9 @@ components:
   -
     type: dockerimage
     alias: maven
-    image: quay.io/eclipse/che-java11-maven:nightly
+    image: maven:3.6.0-jdk-11
+    command: ['sleep']
+    args: ['infinity']
     env:
       - name: MAVEN_CONFIG
         value: /home/user/.m2
@@ -32,6 +34,10 @@ components:
         value: "-XX:MaxRAMPercentage=50 -XX:+UseParallelGC -XX:MinHeapFreeRatio=10
           -XX:MaxHeapFreeRatio=20 -XX:GCTimeRatio=4 -XX:AdaptiveSizePolicyWeight=90
           -Dsun.zip.disableMemoryMapping=true -Xms20m -Djava.security.egd=file:/dev/./urandom"
+      - name: PS1
+        value: $(echo ${0})\\$
+      - name: HOME
+        value: /home/user
     memoryLimit: 512Mi
     endpoints:
       - name: '8080/tcp'
