Update dockerfile patch and make new java devfiles used patched images
Update the arbitrary users patch to make sure $HOME is always writable,
fixing issues with some images.

Update java-spring, java-mysql, and java-vertx to use patched images
  - Update the commands in these images since maven wrapper is
    incompatible with community maven image

Signed-off-by: Angel Misevski <amisevsk@redhat.com>

--- a/arbitrary-users-patch/Dockerfile
+++ b/arbitrary-users-patch/Dockerfile
@@ -2,7 +2,9 @@ ARG FROM_IMAGE
 FROM ${FROM_IMAGE}
 USER 0
 # Set permissions on /etc/passwd and /home to allow arbitrary users to write
-RUN chmod g=u /etc/passwd /home
+RUN mkdir -p /home/user
+RUN chgrp -R 0 /home
+RUN chmod -R g=u /etc/passwd /home
 COPY [--chown=0:0] entrypoint.sh /
 RUN chmod +x /entrypoint.sh
 
