--- a/devfiles/java-mysql/devfile.yaml
+++ b/devfiles/java-mysql/devfile.yaml
@@ -15,9 +15,7 @@ components:
   -
     type: dockerimage
     alias: tools
-    image: registry.centos.org/che-stacks/centos-jdk8
-    command: ['sleep']
-    args: ['infinity']
+    image: quay.io/eclipse/che-java8-maven:nightly
     env:
       - name: JAVA_OPTS
         value: "-XX:MaxRAMPercentage=50.0 -XX:+UseParallelGC -XX:MinHeapFreeRatio=10
@@ -26,8 +24,6 @@ components:
           -Duser.home=/home/user"
       - name: MAVEN_OPTS
         value: $(JAVA_OPTS)
-      - name: PS1
-        value: $(echo ${0})\\$
     memoryLimit: 700Mi
     endpoints:
       - name: '8080/tcp'
@@ -64,7 +60,7 @@ commands:
       -
         type: exec
         component: tools
-        command: "./mvnw clean install"
+        command: "mvn clean install"
         workdir: "${CHE_PROJECTS_ROOT}/web-java-spring-petclinic"
   - name: run webapp
     actions:
