Set back lower memory limits to have stack working by default on che.openshift.io eclipse/che#13832
Signed-off-by: Aurélien Pupier <apupier@redhat.com>

--- a/devfiles/apache-camel-springboot/devfile.yaml
+++ b/devfiles/apache-camel-springboot/devfile.yaml
@@ -16,9 +16,11 @@ components:
   -
     type: chePlugin
     id: camel-tooling/vscode-apache-camel/latest
+    memoryLimit: 200Mi
   -
     type: chePlugin
     id: redhat/java/latest
+    memoryLimit: 1400Mi
   -
     type: dockerimage
     alias: maven
