--- a/devfiles/java-mysql/devfile.yaml
+++ b/devfiles/java-mysql/devfile.yaml
@@ -56,7 +56,7 @@ components:
         attributes:
           discoverable: "true"
           public: "false"
-    mountSources: false
+    mountSources: true
 commands:
   -
     name: maven build
@@ -66,11 +66,21 @@ commands:
         component: tools
         command: "./mvnw clean install"
         workdir: "${CHE_PROJECTS_ROOT}/web-java-spring-petclinic"
-  - name: run webapp
+  -
+    name: run webapp
     actions:
       -
         type: exec
         component: tools
         command: |
-          SPRING_DATASOURCE_URL=jdbc:mysql://db/petclinic SPRING_DATASOURCE_USERNAME=petclinic SPRING_DATASOURCE_PASSWORD=password java -jar target/*.jar --spring.profile.active=mysql
+          SPRING_DATASOURCE_URL=jdbc:mysql://db/petclinic SPRING_DATASOURCE_USERNAME=petclinic SPRING_DATASOURCE_PASSWORD=password java -jar -Dspring.profiles.active=mysql target/*.jar
         workdir: ${CHE_PROJECTS_ROOT}/web-java-spring-petclinic
+  -
+    name: prepare database
+    actions:
+    -
+      type: exec
+      component: mysql
+      command: |
+        /opt/rh/rh-mysql57/root/usr/bin/mysql -u root < ${CHE_PROJECTS_ROOT}/web-java-spring-petclinic/src/main/resources/db/mysql/schema.sql &&
+        echo -e "\e[32mDone.\e[0m Database petclinic was configured!"
