--- a/devfiles/java-web-spring/meta.yaml
+++ b/devfiles/java-web-spring/meta.yaml
@@ -3,4 +3,4 @@ displayName: Java Spring Boot
 description: Java stack with OpenJDK 8 and Spring Boot Petclinic demo application
 tags: ["Java", "OpenJDK", "Maven", "Spring Boot"]
 icon: https://www.eclipse.org/che/images/logo-eclipseche.svg
-globalMemoryLimit: 2674Mi
+globalMemoryLimit: 3Gi
