--- a/devfiles/java-mysql/devfile.yaml
+++ b/devfiles/java-mysql/devfile.yaml
@@ -70,7 +70,12 @@ commands:
         type: exec
         component: tools
         command: |
-          SPRING_DATASOURCE_URL=jdbc:mysql://db/petclinic SPRING_DATASOURCE_USERNAME=petclinic SPRING_DATASOURCE_PASSWORD=password java -jar -Dspring.profiles.active=mysql target/*.jar
+          SPRING_DATASOURCE_URL=jdbc:mysql://db/petclinic \
+          SPRING_DATASOURCE_USERNAME=petclinic \
+          SPRING_DATASOURCE_PASSWORD=password \
+          java -jar -Dspring.profiles.active=mysql \
+          -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005 \
+          target/*.jar
         workdir: ${CHE_PROJECTS_ROOT}/web-java-spring-petclinic
   -
     name: prepare database
@@ -81,3 +86,18 @@ commands:
       command: |
         /opt/rh/rh-mysql57/root/usr/bin/mysql -u root < ${CHE_PROJECTS_ROOT}/web-java-spring-petclinic/src/main/resources/db/mysql/schema.sql &&
         echo -e "\e[32mDone.\e[0m Database petclinic was configured!"
+  - name: Debug remote java application
+    actions:
+      - type: vscode-launch
+        referenceContent: |
+          {
+          "version": "0.2.0",
+          "configurations": [
+            {
+              "type": "java",
+              "name": "Debug (Attach) - Remote",
+              "request": "attach",
+              "hostName": "localhost",
+              "port": 5005
+            }]
+          }
