Add debug configurations to java server devfiles
- Add default debug configurations for java-mysql, java-web-spring, and
  java-web-vertx devfiles
- Modify run commands to start server with debugging enabled

Signed-off-by: Angel Misevski <amisevsk@redhat.com>

--- a/devfiles/java-web-spring/devfile.yaml
+++ b/devfiles/java-web-spring/devfile.yaml
@@ -46,5 +46,22 @@ commands:
       -
         type: exec
         component: tools
-        command: "java -jar target/*.jar"
+        command: |
+          java -jar -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005 \
+          target/*.jar
         workdir: ${CHE_PROJECTS_ROOT}/java-web-spring
+  - name: Debug remote java application
+    actions:
+      - type: vscode-launch
+        referenceContent: |
+          {
+          "version": "0.2.0",
+          "configurations": [
+            {
+              "type": "java",
+              "name": "Debug (Attach) - Remote",
+              "request": "attach",
+              "hostName": "localhost",
+              "port": 5005
+            }]
+          }
