--- a/devfiles/apache-camel-springboot/devfile.yaml
+++ b/devfiles/apache-camel-springboot/devfile.yaml
@@ -63,3 +63,26 @@ commands:
       component: maven
       command: mvn spring-boot:run -DskipTests
       workdir: ${CHE_PROJECTS_ROOT}/fuse-rest-http-booster
+  -
+    name: run the services (debugging enabled)
+    actions:
+      - type: exec
+        component: maven
+        command: mvn spring-boot:run -DskipTests -Drun.jvmArguments="-Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005"
+        workdir: ${CHE_PROJECTS_ROOT}/fuse-rest-http-booster
+  -
+    name: Debug remote java application
+    actions:
+      - type: vscode-launch
+        referenceContent: |
+          {
+          "version": "0.2.0",
+          "configurations": [
+            {
+              "type": "java",
+              "name": "Debug (Attach) - Remote",
+              "request": "attach",
+              "hostName": "localhost",
+              "port": 5005
+            }]
+          }
