Make devfile endpoints match their sample apps
Update devfiles so that exposed ports match those used by the sample
app:
- golang: add port 8080
- java-gradle: remove unused port (simple console app)
- java-maven: remove unused port (simple console app)
- php-laravel: update port to 8000 (instead of 8080)
- php-symfony: update port to 8000 (instead of 8080)
- php-web-simple: Add endpoint for port 8080

Signed-off-by: Angel Misevski <amisevsk@redhat.com>

--- a/devfiles/go/devfile.yaml
+++ b/devfiles/go/devfile.yaml
@@ -28,6 +28,9 @@ components:
       # replicate the GOCACHE from the plugin, even though the cache is not shared
       # between the two
       value: /tmp/.cache
+  endpoints:
+    - name: '8080/tcp'
+      port: 8080
   memoryLimit: 512Mi
   mountSources: true
 commands:
