--- a/devfiles/php-web-simple/devfile.yaml
+++ b/devfiles/php-web-simple/devfile.yaml
@@ -23,6 +23,9 @@ components:
   image: quay.io/eclipse/che-php-7:nightly
   memoryLimit: 512Mi
   mountSources: true
+  endpoints:
+    - name: '8080/tcp'
+      port: 8080
   volumes:
     - name: composer
       containerPath: "/home/user/.composer"
