Add debug config and stop command to go devfile
Signed-off-by: Angel Misevski <amisevsk@redhat.com>

--- a/devfiles/go/devfile.yaml
+++ b/devfiles/go/devfile.yaml
@@ -5,7 +5,7 @@ metadata:
 projects:
 -
   name: example
-  source: 
+  source:
     type: git
     location: https://github.com/golang/example.git
   clonePath: src/github.com/golang/example/
@@ -38,9 +38,33 @@ commands:
     component: go-cli
     command: go get -d && go run main.go
     workdir: ${CHE_PROJECTS_ROOT}/src/github.com/golang/example/outyet
-- name: test outyet
+-
+  name: stop outyet
+  actions:
+  - type: exec
+    component: go-cli
+    command: kill $(pidof go)
+-
+  name: test outyet
   actions:
   - type: exec
     component: go-cli
     command: go test
     workdir: ${CHE_PROJECTS_ROOT}/src/github.com/golang/example/outyet
+-
+  name: Debug current file
+  actions:
+  - type: vscode-launch
+    referenceContent: |
+      {
+        "version": "0.2.0",
+        "configurations": [
+          {
+            "name": "Debug current file",
+            "type": "go",
+            "request": "launch",
+            "mode": "auto",
+            "program": "${fileDirname}",
+          },
+        ]
+      }
