--- a/devfiles/dotnet/devfile.yaml
+++ b/devfiles/dotnet/devfile.yaml
@@ -8,13 +8,16 @@ projects:
     source:
       type: git
       location: "https://github.com/che-samples/dotnet-web-simple"
+      branch: netcoreapp2.2
 components:
   -
     type: chePlugin
+    alias: omnisharp
     id: redhat-developer/che-omnisharp-plugin/latest
     memoryLimit: 1024Mi
   -
     type: chePlugin
+    alias: netcoredbg
     id: redhat-developer/netcoredbg-theia-plugin/latest
     memoryLimit: 512Mi
   -
@@ -44,3 +47,28 @@ commands:
         component: dotnet
         command: "dotnet run"
         workdir: ${CHE_PROJECTS_ROOT}/dotnet-web-simple
+  -
+    name: build
+    actions:
+    - type: exec
+      component: netcoredbg
+      command: "dotnet restore && dotnet build"
+      workdir: ${CHE_PROJECTS_ROOT}/dotnet-web-simple
+  - name: Launch .NET Web Application on Debug mode
+    actions:
+    - type: vscode-launch
+      referenceContent: |
+        {
+          "version": "0.2.0",
+            "configurations": [
+              {
+                  "type": "netcoredbg",
+                  "request": "launch",
+                  "program": "/projects/dotnet-web-simple/bin/Debug/netcoreapp2.2/web.dll",
+                  "args": [],
+                  "name": ".NET Core Launch (console)",
+                  "stopAtEntry": false,
+                  "console": "internalConsole"
+              }
+          ]
+        }
