--- a/devfiles/php-web-simple/devfile.yaml
+++ b/devfiles/php-web-simple/devfile.yaml
@@ -44,3 +44,9 @@ commands:
     - type: exec
       component: php
       command: "service apache2 stop"
+-
+    name: Restart Apache Web Server
+    actions:
+    - type: exec
+      component: php
+      command: "service apache2 restart"
