Adding restart command to the 'php-web-simple' devfile
Signed-off-by: Ilya Buziuk <ibuziuk@redhat.com>

--- a/devfiles/php-web-simple/devfile.yaml
+++ b/devfiles/php-web-simple/devfile.yaml
@@ -41,3 +41,9 @@ commands:
     - type: exec
       component: php
       command: "service apache2 stop"
+-
+    name: Restart Apache Web Server
+    actions:
+    - type: exec
+      component: php
+      command: "service apache2 restart"
