use generateName instead of just name
Signed-off-by: Michal Vala <mvala@redhat.com>

--- a/devfiles/java-web-spring/devfile.yaml
+++ b/devfiles/java-web-spring/devfile.yaml
@@ -1,7 +1,7 @@
 ---
 apiVersion: 1.0.0
 metadata:
-  name: java-web-spring
+  generateName: java-web-spring-
 projects:
   -
     name: java-web-spring
