--- a/devfiles/apache-camel-springboot/devfile.yaml
+++ b/devfiles/apache-camel-springboot/devfile.yaml
@@ -1,7 +1,7 @@
 ---
 apiVersion: 1.0.0
 metadata:
-  name: apache-camel-springboot
+  generateName: apache-camel-springboot-
 projects:
   -
     name: fuse-rest-http-booster
