--- a/devfiles/java-mysql/devfile.yaml
+++ b/devfiles/java-mysql/devfile.yaml
@@ -1,7 +1,7 @@
 ---
 apiVersion: 1.0.0
 metadata:
-  name: java-mysql
+  generateName: java-mysql-
 projects:
   -
     name: web-java-spring-petclinic
