--- a/devfiles/nodejs-mongo/devfile.yaml
+++ b/devfiles/nodejs-mongo/devfile.yaml
@@ -1,7 +1,7 @@
 ---
 apiVersion: 1.0.0
 metadata:
-  name: nodejs-mongo
+  generateName: nodejs-mongo-
 projects:
   -
     name: nodejs-mongodb-app
