--- a/devfiles/nodejs-react/devfile.yaml
+++ b/devfiles/nodejs-react/devfile.yaml
@@ -1,7 +1,7 @@
 ---
 apiVersion: 1.0.0
 metadata:
-  name: react
+  generateName: react-
 projects:
   -
     name: react-redux-realworld-example-app
