--- a/devfiles/php-laravel/devfile.yaml
+++ b/devfiles/php-laravel/devfile.yaml
@@ -1,7 +1,7 @@
 ---
 apiVersion: 1.0.0
 metadata:
-  name: php-laravel
+  generateName: php-laravel-
 projects:
 -
   name: laravel-realworld-example-app
