--- a/devfiles/php-symfony/devfile.yaml
+++ b/devfiles/php-symfony/devfile.yaml
@@ -1,7 +1,7 @@
 ---
 apiVersion: 1.0.0
 metadata:
-  name: php-symfony
+  generateName: php-symfony-
 projects:
 -
   name: symfony-demo-application
