--- a/devfiles/go/devfile.yaml
+++ b/devfiles/go/devfile.yaml
@@ -55,6 +55,13 @@ commands:
     command: go test
     workdir: ${CHE_PROJECTS_ROOT}/src/github.com/golang/example/outyet
 -
+  name: run current file
+  actions:
+  - type: exec
+    component: go-cli
+    command: go get -d && go run ${file}
+    workdir: ${fileDirname}
+-
   name: Debug current file
   actions:
   - type: vscode-launch
