Add script to patch devfiles to use tagged patched base images
Adds a script 'update_devfile_patched_image_tags.sh` that updates all
devfiles to point to custom-tagged arbitrary-user-id patched base
images using environment variables, and update Dockerfiles to use this
script during build.

Can be configured with build-args while executing docker build:
- PATCHED_IMAGES_REG : Registry for patched images; default 'quay.io'
- PATCHED_IMAGES_ORG : Organization for patched images; default
                       'eclipse'
- PATCHED_IMAGES_TAG : Tag for patched images; default 'nightly'

Also updates build.sh script to take into account version number stored
in VERSION; if set to non-snapshot build, version is parsed from
'VERSION' file and passed as PATCHED_IMAGES_TAG

Signed-off-by: Angel Misevski <amisevsk@redhat.com>

--- a/Dockerfile.rhel
+++ b/Dockerfile.rhel
@@ -9,9 +9,17 @@
 FROM alpine:3.10 AS builder
 RUN apk add --no-cache py-pip jq bash && pip install yq
 
-COPY .htaccess README.md *.sh /build/
+ARG PATCHED_IMAGES_REG="quay.io"
+ARG PATCHED_IMAGES_ORG="eclipse"
+ARG PATCHED_IMAGES_TAG="nightly"
+
+COPY .htaccess README.md *.sh ./arbitrary-users-patch/base_images /build/
 COPY /devfiles /build/devfiles
 WORKDIR /build/
+RUN TAG=${PATCHED_IMAGES_TAG} \
+    ORGANIZATION=${PATCHED_IMAGES_ORG} \
+    REGISTRY=${PATCHED_IMAGES_REG} \
+    ./update_devfile_patched_image_tags.sh
 RUN ./check_mandatory_fields.sh devfiles
 RUN ./index.sh > /build/devfiles/index.json
 
