--- a/devfiles/python-django/devfile.yaml
+++ b/devfiles/python-django/devfile.yaml
@@ -16,7 +16,7 @@ components:
   -
     type: dockerimage
     alias: python
-    image: quay.io/eclipse/che-python-3.6:nightly
+    image: centos/python-36-centos7:1
     memoryLimit: 512Mi
     endpoints:
       - name: 'django'
