--- a/devfiles/python/meta.yaml
+++ b/devfiles/python/meta.yaml
@@ -1,6 +1,6 @@
 ---
 displayName: Python
-description: Stack with Python 3.6
+description: Python Stack with Python 3.6
 tags: ["Centos", "Python", "pip"]
 icon: https://www.eclipse.org/che/images/logo-eclipseche.svg
 globalMemoryLimit: 1686Mi
