--- a/devfiles/python-django/meta.yaml
+++ b/devfiles/python-django/meta.yaml
@@ -1,5 +1,5 @@
 ---
-displayName: Django
+displayName: Python Django
 description: Python Stack with Python 3.6 and Django application
 tags: ["Centos", "Python", "pip"]
 icon: https://www.eclipse.org/che/images/logo-eclipseche.svg
