Update python tooling image (#93)
* Update python tooling image

Signed-off-by: Anatoliy Bazko <abazko@redhat.com>

--- a/devfiles/python-django/devfile.yaml
+++ b/devfiles/python-django/devfile.yaml
@@ -16,7 +16,7 @@ components:
   -
     type: dockerimage
     alias: python
-    image: quay.io/eclipse/che-python-3.6:nightly
+    image: quay.io/eclipse/che-python-3.7:nightly
     memoryLimit: 512Mi
     endpoints:
       - name: 'django'
@@ -29,7 +29,7 @@ commands:
       -
         type: exec
         component: python
-        command: pip install -r requirements.txt && pip install ptvsd
+        command: pip install --user -r requirements.txt && pip install --user ptvsd
         workdir: ${CHE_PROJECTS_ROOT}/django-realworld-example-app
   -
     name: migrate
