--- a/devfiles/go-web-sample/meta.yaml
+++ b/devfiles/go-web-sample/meta.yaml
@@ -1,6 +1,6 @@
 ---
-displayName: Go
-description: Stack with Go 1.12.9
+displayName: Go Real World Application
+description: Go Stack with Python 1.12.9 and real wold application
 tags: ["Debian", "Go"]
 icon: https://www.eclipse.org/che/images/logo-eclipseche.svg
 globalMemoryLimit: 1686Mi
