--- a/devfiles/go-web-sample/devfile.yaml
+++ b/devfiles/go-web-sample/devfile.yaml
@@ -8,7 +8,7 @@ projects:
   source:
     type: git
     location: https://github.com/xesina/golang-echo-realworld-example-app
-  clonePath: src/github.com/xesina/golang-echo-realworld-example-app
+  clonePath: golang-web-app
 components:
 -
   type: chePlugin
@@ -17,7 +17,6 @@ components:
   memoryLimit: 512Mi
 -
   type: dockerimage
-  # this version is used in the plugin
   image: quay.io/eclipse/che-golang-1.12:nightly
   alias: go-cli
   env:
@@ -39,28 +38,28 @@ commands:
   - type: exec
     component: go-cli
     command: go mod download
-    workdir: ${CHE_PROJECTS_ROOT}/src/github.com/xesina/golang-echo-realworld-example-app
+    workdir: ${CHE_PROJECTS_ROOT}/golang-web-app
 -
   name: run
   actions:
   - type: exec
     component: go-cli
     command: go run main.go
-    workdir: ${CHE_PROJECTS_ROOT}/src/github.com/xesina/golang-echo-realworld-example-app
+    workdir: ${CHE_PROJECTS_ROOT}/golang-web-app
 -
   name: build
   actions:
   - type: exec
     component: go-cli
     command: go build
-    workdir: ${CHE_PROJECTS_ROOT}/src/github.com/xesina/golang-echo-realworld-example-app
+    workdir: ${CHE_PROJECTS_ROOT}/golang-web-app
 -
   name: test
   actions:
   - type: exec
     component: go-cli
     command: go test ./...
-    workdir: ${CHE_PROJECTS_ROOT}/src/github.com/xesina/golang-echo-realworld-example-app
+    workdir: ${CHE_PROJECTS_ROOT}/golang-web-app
 -
   name: user create
   actions:
