--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,7 +15,7 @@ pool:
   vmImage: 'Ubuntu-16.04'
 
 steps:
-- script: docker build -f Dockerfile -t $(imageName) .
+- script: docker build -f build/dockerfiles/Dockerfile -t $(imageName) .
   displayName: 'docker build'
 
 - task: Docker@1
