--- a/devfiles/jsp_core/blackfin-ekit_bf533/meta.yaml
+++ b/devfiles/jsp_core/blackfin-ekit_bf533/meta.yaml
@@ -2,5 +2,5 @@
 displayName: "Builder for TOPPERS/JSP (target: blackfin-ekit_bf533)"
 description: GNU toolchains and TOPPERS/JSP tuned by PizzaFactory
 tags: ["TOPPERS", "TOPPERS/JSP", "PizzaFactory", "ITRON", "blackfin-ekit_bf533" ]
-icon: https://raw.githubusercontent.com/wiki/PizzaFactory/che-devfile-registry/toppers-open.svg
+icon: https://camino.pizzafactory.jp/images/logos/toppers-open.svg
 globalMemoryLimit: 1024Mi
