--- a/devfiles/jsp_core/m32r-m3a_za36/meta.yaml
+++ b/devfiles/jsp_core/m32r-m3a_za36/meta.yaml
@@ -2,5 +2,5 @@
 displayName: "Builder for TOPPERS/JSP (target: m32r-m3a_za36)"
 description: GNU toolchains and TOPPERS/JSP tuned by PizzaFactory
 tags: ["TOPPERS", "TOPPERS/JSP", "PizzaFactory", "ITRON", "m32r-m3a_za36" ]
-icon: https://raw.githubusercontent.com/wiki/PizzaFactory/che-devfile-registry/toppers-open.svg
+icon: https://camino.pizzafactory.jp/images/logos/toppers-open.svg
 globalMemoryLimit: 1024Mi
