--- a/devfiles/jsp_core/m68k-dve68k/devfile.yaml
+++ b/devfiles/jsp_core/m68k-dve68k/devfile.yaml
@@ -18,20 +18,20 @@ commands:
   - name: "build configurator"
     actions:
       - type: exec
-        component: theia-dev
+        component: pizza-dev
         command: cd ${CHE_PROJECTS_ROOT}/jsp_core/cfg && make CC=gcc-4.7 CXX=g++-4.7 && echo && echo Build complete.
   - name: "configure sample1"
     actions:
       - type: exec
-        component: theia-dev
+        component: pizza-dev
         command: cd ${CHE_PROJECTS_ROOT}/jsp_core && ./configure -C m68k -S dve68k
   - name: "make depend"
     actions:
       - type: exec
-        component: theia-dev
+        component: pizza-dev
         command: cd ${CHE_PROJECTS_ROOT}/jsp_core && make depend TARGET=m68k-pizzafactory-elf && echo && echo Done.
   - name: "build JSP kernel"
     actions:
       - type: exec
-        component: theia-dev
+        component: pizza-dev
         command: cd ${CHE_PROJECTS_ROOT}/jsp_core && make TARGET=m68k-pizzafactory-elf
