Mark configmaps as optional
Signed-off-by: Angel Misevski <amisevsk@redhat.com>

--- a/deploy/openshift/che-devfile-registry.yaml
+++ b/deploy/openshift/che-devfile-registry.yaml
@@ -63,6 +63,7 @@ objects:
           envFrom:
           - configMapRef:
               name: che-devfile-registry
+              optional: true
     triggers:
     - type: ConfigChange
 - apiVersion: v1
