Fix debug configuration (#114)
* Fix

Signed-off-by: Anatoliy Bazko <abazko@redhat.com>

* Fix

Signed-off-by: Anatoliy Bazko <abazko@redhat.com>

* Fix

Signed-off-by: Anatoliy Bazko <abazko@redhat.com>

--- a/devfiles/nodejs/devfile.yaml
+++ b/devfiles/nodejs/devfile.yaml
@@ -68,7 +68,7 @@ commands:
               "address": "localhost",
               "port": 9229,
               "localRoot": "${workspaceFolder}",
-              "remoteRoot": "#{workspaceFolder}"
+              "remoteRoot": "${workspaceFolder}"
             }
           ]
         }
