Allow overriding container images used in devfiles (#110)
* Add ability to override images used in devfiles at runtime

Adds the ability to override the registry url, organization, and tag of
images used in devfiles via environment variables

     CHE_DEVFILE_IMAGE_REGISTRY_URL
     CHE_DEVFILE_IMAGE_REGISTRY_ORGANIZATION
     CHE_DEVFILE_IMAGE_REGISTRY_TAG

Signed-off-by: Angel Misevski <amisevsk@redhat.com>

--- a/deploy/kubernetes/che-devfile-registry/values.yaml
+++ b/deploy/kubernetes/che-devfile-registry/values.yaml
@@ -12,6 +12,14 @@ cheDevfileRegistryImagePullPolicy: Always
 cheDevfileRegistryMemoryLimit: 256Mi
 #cheDevfileRegistryIngressSecretName: che-tls
 
+cheDevfileImagesOverride:
+  # Override for registry URL in images used in devfiles
+  url:
+  # Override for registry organization in images used in devfiles
+  organization:
+  # Override for image tags used images referenced in devfiles
+  tag:
+
 global:
   ingressDomain: 192.168.99.100.nip.io
   ingress:
