--- a/deploy/kubernetes/che-devfile-registry/templates/deployment.yaml
+++ b/deploy/kubernetes/che-devfile-registry/templates/deployment.yaml
@@ -56,3 +56,7 @@ spec:
             memory: {{ .Values.cheDevfileRegistryMemoryLimit }}
           requests:
             memory: 256Mi
+        envFrom:
+          - configMapRef:
+              name: che-devfile-registry
+              optional: true
