Improve airgap support
- Update all devfile image refs to use registry explicitly (e.g.
  docker.io instead of implicit)
- Update list_referenced_images.sh to list images referenced anywhere
in devfile

Signed-off-by: Angel Misevski <amisevsk@redhat.com>

--- a/devfiles/nodejs-mongo/devfile.yaml
+++ b/devfiles/nodejs-mongo/devfile.yaml
@@ -31,7 +31,7 @@ components:
   -
     type: dockerimage
     alias: mongo
-    image: centos/mongodb-34-centos7
+    image: docker.io/centos/mongodb-34-centos7
     memoryLimit: 512Mi
     env:
       - name: MONGODB_USER
