--- a/devfiles/java-mysql/devfile.yaml
+++ b/devfiles/java-mysql/devfile.yaml
@@ -36,7 +36,7 @@ components:
   -
     type: dockerimage
     alias: mysql
-    image: centos/mysql-57-centos7
+    image: docker.io/centos/mysql-57-centos7
     env:
       - name: MYSQL_USER
         value: petclinic
