--- a/devfiles/jsp_core/blackfin-ezkit_bf548/devfile.yaml
+++ b/devfiles/jsp_core/blackfin-ezkit_bf548/devfile.yaml
@@ -19,12 +19,14 @@ commands:
     actions:
       - type: exec
         component: pizza-dev
-        command: cd ${CHE_PROJECTS_ROOT}/jsp_core/cfg && make CC=gcc-4.7 CXX=g++-4.7 && echo && echo Build complete.
+        command: make CC=gcc-4.7 CXX=g++-4.7 && echo && echo Build complete.
+        workdir: ${CHE_PROJECTS_ROOT}/jsp_core/cfg
   - name: "configure sample1"
     actions:
       - type: exec
         component: pizza-dev
         command: cd ${CHE_PROJECTS_ROOT}/jsp_core && ./configure -C blackfin -S ezkit_bf548
+        workdir: ${CHE_PROJECTS_ROOT}/jsp_core
   - name: "make depend"
     actions:
       - type: exec
