set more memory for dev container
Signed-off-by: svor <vsvydenk@redhat.com>

--- a/devfiles/nodejs-yarn/devfile.yaml
+++ b/devfiles/nodejs-yarn/devfile.yaml
@@ -17,7 +17,7 @@ components:
     type: dockerimage
     alias: nodejs
     image: quay.io/eclipse/che-nodejs10-community:nightly
-    memoryLimit: 512Mi
+    memoryLimit: 1Gi
     endpoints:
       - name: 'nodejs'
         port: 3000
