Add devfile icons to repo and use them in devfiles
Signed-off-by: Angel Misevski <amisevsk@redhat.com>

--- a/devfiles/java-mysql/meta.yaml
+++ b/devfiles/java-mysql/meta.yaml
@@ -2,5 +2,5 @@
 displayName: Java with Spring Boot and MySQL
 description: Java stack with OpenJDK 8, MySQL and Spring Boot Petclinic demo application
 tags: ["Java", "OpenJDK", "Maven", "Spring Boot", "MySQL"]
-icon: https://www.eclipse.org/che/images/logo-eclipseche.svg
+icon: /images/springboot.svg
 globalMemoryLimit: 3072Mi
