--- a/devfiles/apache-camel-k/meta.yaml
+++ b/devfiles/apache-camel-k/meta.yaml
@@ -2,5 +2,5 @@
 displayName: Apache Camel K
 description: Stack with tooling ready to develop Integration projects with Apache Camel K
 tags: ["Apache Camel K", "Red Hat Fuse", "Integration"]
-icon: https://www.eclipse.org/che/images/logo-eclipseche.svg
+icon: /images/camelk.svg
 globalMemoryLimit: 2850Mi
