--- a/devfiles/che4z/meta.yaml
+++ b/devfiles/che4z/meta.yaml
@@ -2,5 +2,5 @@
 displayName: Mainframe Basic Stack
 description: Mainframe Basic Stack
 tags: ["Che4z", "Zowe", "mainframe", "Endevor", "explorer", "dataset", "COBOL", "JCL", "zOS", "USS", "HLASM", "InterTest", "debug"]
-icon: https://www.eclipse.org/che/images/logo-eclipseche.svg
+icon: /images/mainframe.svg
 globalMemoryLimit: 2280Mi
