--- a/devfiles/java-gradle/meta.yaml
+++ b/devfiles/java-gradle/meta.yaml
@@ -2,5 +2,5 @@
 displayName: Java Gradle
 description: Java Stack with OpenJDK 11 and Gradle 5.2.1
 tags: ["Java", "OpenJDK", "Gradle", "Ubuntu"]
-icon: https://www.eclipse.org/che/images/logo-eclipseche.svg
+icon: /images/java.svg
 globalMemoryLimit: 2674Mi
