--- a/devfiles/quarkus/meta.yaml
+++ b/devfiles/quarkus/meta.yaml
@@ -2,5 +2,5 @@
 displayName: Quarkus Tools
 description: Quarkus Tools with OpenJDK 8 and Maven 3.6.0
 tags: ["Java", "Quarkus", "OpenJDK", "Maven", "Debian"]
-icon: https://www.eclipse.org/che/images/logo-eclipseche.svg
+icon: /images/quarkus.svg
 globalMemoryLimit: 2674Mi
