--- a/devfiles/rust/meta.yaml
+++ b/devfiles/rust/meta.yaml
@@ -2,5 +2,5 @@
 displayName: Rust
 description: Rust Stack with Rust 1.39
 tags: ["Rust"]
-icon: https://www.eclipse.org/che/images/logo-eclipseche.svg
+icon: /images/rust.svg
 globalMemoryLimit: 1686Mi
