Add `hostnameOverride` to value.yaml.
Signed-off-by: Masaki Muranaka <monaka@monami-ya.com>

--- a/deploy/kubernetes/che-devfile-registry/values.yaml
+++ b/deploy/kubernetes/che-devfile-registry/values.yaml
@@ -12,6 +12,8 @@ cheDevfileRegistryImagePullPolicy: Always
 cheDevfileRegistryMemoryLimit: 256Mi
 cheDevfileRegistryIngressSecretName: che-tls
 
+#hostnameOverride: "che-devfile-registry"
+
 cheDevfileImagesOverride:
   # Override for registry URL in images used in devfiles
   url: camino.azurecr.io
