--- a/deploy/kubernetes/che-devfile-registry/templates/ingress.yaml
+++ b/deploy/kubernetes/che-devfile-registry/templates/ingress.yaml
@@ -6,7 +6,9 @@
 #
 # SPDX-License-Identifier: EPL-2.0
 #
-
+{{- define "hostname" -}}
+{{- .Values.hostnameOverride | default (printf "che-plugin-registry-%s" .Release.Namespace) -}}
+{{- end -}}
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
@@ -15,7 +17,7 @@ metadata:
     kubernetes.io/ingress.class: {{ .Values.global.ingress.class }}
 spec:
   rules:
-  - host: {{ printf "che-devfile-registry-%s.%s" .Release.Namespace .Values.global.ingressDomain }}
+  - host: {{ template "hostname" . -}} . {{- .Values.global.ingressDomain }}
     http:
       paths:
       - path: /
@@ -25,6 +27,6 @@ spec:
 {{- if .Values.cheDevfileRegistryIngressSecretName }}
   tls:
   - hosts:
-    - {{ printf "che-devfile-registry-%s.%s" .Release.Namespace .Values.global.ingressDomain }}
+    - {{ template "hostname" . -}} . {{- .Values.global.ingressDomain }}
     secretName: {{ .Values.cheDevfileRegistryIngressSecretName }}
 {{- end -}}
