--- a/devfiles/java-web-spring/meta.yaml
+++ b/devfiles/java-web-spring/meta.yaml
@@ -2,5 +2,5 @@
 displayName: Java Spring Boot
 description: Java stack with OpenJDK 8 and Spring Boot Petclinic demo application
 tags: ["Java", "OpenJDK", "Maven", "Spring Boot"]
-icon: /images/springboot.svg
+icon: /images/snowdrop.svg
 globalMemoryLimit: 3072Mi
