Update Che4z icon
Signed-off-by: Angel Misevski <amisevsk@redhat.com>

--- a/devfiles/che4z/meta.yaml
+++ b/devfiles/che4z/meta.yaml
@@ -2,5 +2,5 @@
 displayName: Mainframe Basic Stack
 description: Mainframe Basic Stack
 tags: ["Che4z", "Zowe", "mainframe", "Endevor", "explorer", "dataset", "COBOL", "JCL", "zOS", "USS", "HLASM", "InterTest", "debug"]
-icon: /images/mainframe.svg
+icon: /images/che4z.svg
 globalMemoryLimit: 2280Mi
