Add `fetch-depth: 0` to actions/checkout@v2.

--- a/.github/workflows/update-to-the-upstream.yml
+++ b/.github/workflows/update-to-the-upstream.yml
@@ -10,6 +10,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
     - name: merge-push
       run: |
         git remote add up https://github.com/eclipse/che-devfile-registry.git
