Use java8 plugin instead of java (#297)
* use java8 plugin instead of java

Signed-off-by: svor <vsvydenk@redhat.com>

* Add preference to not have the vscode-java prompt

Signed-off-by: svor <vsvydenk@redhat.com>

* Use redhat/java instead of redhat/java11

Signed-off-by: svor <vsvydenk@redhat.com>

--- a/devfiles/java-gradle/devfile.yaml
+++ b/devfiles/java-gradle/devfile.yaml
@@ -12,7 +12,9 @@ projects:
 components:
   -
     type: chePlugin
-    id: redhat/java11/latest
+    id: redhat/java/latest
+    preferences:
+      java.server.launchMode: Standard
   -
     type: dockerimage
     alias: gradle
