--- a/devfiles/java-web-spring/devfile.yaml
+++ b/devfiles/java-web-spring/devfile.yaml
@@ -12,8 +12,10 @@ projects:
 components:
   -
     type: chePlugin
-    id: redhat/java11/latest
+    id: redhat/java/latest
     memoryLimit: 1512Mi
+    preferences:
+      java.server.launchMode: Standard
   -
     type: dockerimage
     alias: tools
