Allow to persist databases
Signed-off-by: Vitaliy Gulyy <vgulyy@redhat.com>

--- a/devfiles/php-laravel/devfile.yaml
+++ b/devfiles/php-laravel/devfile.yaml
@@ -48,7 +48,7 @@ components:
       port: 3306
       attributes:
         discoverable: "true"
-  mountSources: false
+  mountSources: true
 commands:
 -
   name: Start Artisan Web Server
