--- a/devfiles/php-symfony/devfile.yaml
+++ b/devfiles/php-symfony/devfile.yaml
@@ -50,7 +50,7 @@ components:
       port: 3306
       attributes:
         discoverable: "true"
-  mountSources: false
+  mountSources: true
 commands:
 -
   name: Start Symfony Web Server
