fix master to main
Signed-off-by: Esteban Mañaricua <emanaricua@gmail.com>

--- a/devfiles/lombok/devfile.yaml
+++ b/devfiles/lombok/devfile.yaml
@@ -6,7 +6,7 @@ projects:
     source:
       location: 'https://github.com/che-samples/lombok-demo.git'
       type: git
-      branch: master
+      branch: main
 components:
   - id: redhat/java8/latest
     type: chePlugin
