Set 0.0.0.0 as a host to run Quarkus app (#318)
* Set host to run quarkus app

Signed-off-by: svor <vsvydenk@redhat.com>

* Add QUARKUS_HTTP_HOST env

Signed-off-by: svor <vsvydenk@redhat.com>

--- a/devfiles/quarkus/devfile.yaml
+++ b/devfiles/quarkus/devfile.yaml
@@ -24,7 +24,9 @@ components:
           -Dsun.zip.disableMemoryMapping=true -Xms20m -Djava.security.egd=file:/dev/./urandom
           -Duser.home=/home/user"
       - name: MAVEN_OPTS
-        value: $(JAVA_OPTS)  
+        value: $(JAVA_OPTS)
+      - name: QUARKUS_HTTP_HOST
+        value: 0.0.0.0
     memoryLimit: 4G
     mountSources: true
     volumes:
