Add manual release job trigger
Signed-off-by: Mykhailo Kuznietsov <mkuznets@redhat.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,11 +10,12 @@
 name: Release Che Devfile Registry
 
 on:
+  workflow_dispatch
   push:
     branches: 
-      - release
+      - 'release'
     paths:
-      - VERSION
+      - 'VERSION'
 
 jobs:
   release-build-publish:
