Add parameter to manual release job trigger
Signed-off-by: Mykhailo Kuznietsov <mkuznets@redhat.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,11 @@
 name: Release Che Devfile Registry
 
 on:
-  workflow_dispatch
+  workflow_dispatch:
+    inputs:
+      version:
+        description: 'release version in format 7.y.z'
+        required: true
   push:
     branches: 
       - 'release'
