Add default kubernetes labels
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/deploy/kubernetes/che-devfile-registry/templates/deployment.yaml
+++ b/deploy/kubernetes/che-devfile-registry/templates/deployment.yaml
@@ -10,15 +10,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  labels:
-    app: che-devfile-registry
   name: che-devfile-registry
+  labels:
+    app: che
+    component: devfile-registry
+    app.kubernetes.io/name: che
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
+    helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
 spec:
   replicas: 1
   revisionHistoryLimit: 2
   selector:
     matchLabels:
-      app: che-devfile-registry
+      app: che
+      component: devfile-registry
   strategy:
     type: RollingUpdate
     rollingUpdate:
@@ -27,7 +33,8 @@ spec:
   template:
     metadata:
       labels:
-        app: che-devfile-registry
+        app: che
+        component: devfile-registry
     spec:
       containers:
       - image: {{ .Values.cheDevfileRegistryImage }}
